validations email form

--- a/app/views/receivables/email_form.html.erb
+++ b/app/views/receivables/email_form.html.erb
@@ -1,5 +1,5 @@
 
-<%= form_for :email, url: sending_email_receivable_path(@receivable) do |e| %>
+<%= form_for :message_u, url: sending_email_receivable_path(@receivable) do |e| %>
    <p> 
       <%= e.label :subject %><br>
       <%= e.text_field :subject %>
